Fix spacing further

--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ div#timeline-1 {
 }
 
 .details{
-  margin-top: -20px;
+  margin-top: -35px;
+  margin-bottom: 35px;
 }
 
 .timeline__content-title {
